# FileShare

./: .replit  README.md  app.py  auth_routes.py  config.py  create_initial_user.py  file_routes.py  models.py  pyproject.toml  routes.py  utils.py
static/css/: styles.css
static/js/: main.js
templates/: base.html  dashboard.html  email_verification.html  files.html  login.html  signup.html  upload.html
tests/: test_auth.py  test_files.py
